<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_refresh_action"
        android:title="@string/menu_refresh"
        android:orderInCategory="1"
        android:showAsAction="always" />

    <item android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_menu_refresh_holo_light"
        android:orderInCategory="100"
        android:showAsAction="always"/>
    <item android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="101"
        android:showAsAction="always"/>
    <item android:id="@+id/menu_stop"
        android:title="@string/menu_stop"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_action_action_info"
        android:showAsAction="ifRoom"
        android:orderInCategory="103"
        android:title="@string/menu_info"/>
</menu>
